@@ -34,7 +34,9 @@
 #include "twitux.h"
 #include "twitux-network.h"
 #include "twitux-parser.h"
+
 #include "twitux-app.h"
+#include "twitux-send-message-dialog.h"
 
 #define DEBUG_DOMAIN	  "Network"
 #define TWITUX_HEADER_URL "http://twitux.sourceforge.net/client.xml"
@@ -761,11 +763,13 @@ network_cb_on_users (SoupMessage *msg,
 
 	/* check if it ok, and if it is a followers or following list */
 	if (users && friends){
-		/* Friends timeline retrived */
+		/* Friends retrived */
 		user_friends = users;
 		twitux_app_set_friends (users);
 	} else if (users){
-		/* TODO: some UI here. Followers timeline retrived */
+		/* Followers retrived */
+		user_followers = users;
+		twitux_message_set_followers (users);
 	} else {
 		twitux_app_set_statusbar_msg (_("Users parser error."));
 	}
